--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -13,16 +14,16 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.2); 
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, .2);
   display: flex;
-  gap: 16px;
-  padding: 16px;
+  padding: 12px
 }
 
 .icon {
@@ -36,6 +37,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 12px;
   flex-shrink: 0;
 }
 
@@ -55,6 +57,7 @@ body {
 button {
   padding: 8px 16px;
   border-radius: 8px;
+  margin-top: 16px;
 }
 
 button.continue {
@@ -69,15 +72,14 @@ button.cancel {
   color: royalblue;
 }
 
-.header {
+.top {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  font-size: 18px;
-  font-weight: 700;
-  margin-bottom: 8px;
+  margin-bottom: 12px;
+  margin-top: 12px
 }
 
-.text {
-  margin-bottom: 16px;
+.header {
+  font-size: larger;
+  font-weight: bold;
 }
