--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -5,6 +5,7 @@ body {
   display: flex;
   flex-direction: column;
   
+  
 }
 
 .header {
@@ -13,47 +14,65 @@ body {
   color: white;
   font-size: 32px;
   font-weight: 900;
-  padding-top: 20px;
-  padding-left: 10px;
-  padding-bottom: 0px;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
-  padding: 16px;
-}
-
-a {
+  flex-shrink: 0;
   font-size: 24px;
-  color: white;
-  text-decoration: none;
-}
-
-ul {
-  list-style: none;
+  padding: 16px;
+  /*display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;*/
 }
 
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, .06);
   border-radius: 4px;
-  padding: 10px;
+  padding: 16px;
+  flex-shrink: 0;
+  width: 300px
 }
 
 .container {
   display: flex;
 }
 
-.cardwrap {
+.card-container {
   display: flex;
   flex-wrap: wrap;
-  padding: 40px;
+  padding: 32px;
+  gap: 32px;
+  margin: 16px;
+}
+
+a {
+  text-decoration: none;
+  color: white
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 17px;
+  margin: 0px;
+  padding: 0px;
 }
 
